<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingStart="5dp">

        <TextView
            style="@style/inventory_column_names_small"
            android:text="@string/item"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/textView"
            style="@style/inventory_column_names_small"
            android:text="@string/details" />

        <TextView
            style="@style/inventory_column_names_small"
            android:text="@string/unit" />

        <TextView
            style="@style/inventory_column_names_small"
            android:text="@string/price" />

        <TextView
            style="@style/inventory_column_names_small"
            android:text="@string/quant" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="5dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/inventory_list_item_name"
            style="@style/item_list_values"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="Cabilla" />

        <TextView
            android:id="@+id/inventory_list_item_description"
            style="@style/item_list_values"
            tools:text="3in x 6m" />

        <TextView
            android:id="@+id/inventory_list_item_unit"
            style="@style/item_list_values"
            tools:text="Pieces" />

        <TextView
            android:id="@+id/inventory_list_item_price"
            style="@style/item_list_values"
            tools:text="1000" />

        <TextView
            android:id="@+id/inventory_list_item_quantity"
            style="@style/item_list_values"
            tools:text="16" />

    </LinearLayout>

    <LinearLayout
        android:background="#5D6D7E"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inventory_list_item_sell_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/sell_quantity_hint"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="number"
                android:textAppearance="?android:textAppearanceSmall" />

            <Button
                android:id="@+id/inventory_list_item_sell_button"
                style="@style/inventory_list_item_button"
                android:text="@string/sell" />
        </LinearLayout>

        <Button
            android:id="@+id/inventory_list_item_open_detail_activity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/open_details"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>